<resources>
    <string name="app_name">toDoList - DesafioDio</string>
    <string name="toolbar_create_task">Criar Tarefa</string>
    <string name="hint_input_title">Título</string>
    <string name="hint_input_description">Descrição</string>
    <string name="hint_input_date">Data</string>
    <string name="hint_input_hour">Hora</string>
    <string name="button_create_task">Criar Tarefa</string>
    <string name="button_cancel"><u>Cancelar</u></string>
    <string name="tv_title_home">Tarefas</string>
    <string name="description_add_new_task">Adicionar nova tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Excluir</string>
    <string name="empty_state">Ops! Você não possui\nnenhuma tarefa</string>
</resources>